--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <style>
+
+        </style>
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://use.fontawesome.com/6a71565c22.js"></script>
@@ -36,6 +42,14 @@
 </html>
 
 <body>
+
+<div class="polaroid">
+  <img src="images/chuck_norris.jpg" alt="5 Terre" style="width:100%">
+  <div class="container">
+  <!--<p>Chuck Norris</p>  -->
+  </div>
+</div>
+
     <header>
         <h1>Chuck Norris Joke</h1>
     </header>
