--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
     <!--Scripts file -->
     <script src="scripts.js"></script>
+    <script src="sw.js"></script>
+    <script src="app.js"></script>
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -88,7 +90,7 @@
                     <!-- Button to activate the event listener, search joke -->
                     <button type="button" class="btn btn-primary" id="getSearch">
                         Get Joke
-                        <i class="fa fa-search" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-search" aria-hidden="true"></i> -->
                     </button>
                     <backquote class="card-footer text-muted">
                         <p id="searchJoke"></p>
